@@ -1,3 +1,9 @@
+2006-04-02  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/mozilla-notifiers.cpp:
+
+	Oops, this is a string pref!
+
 2006-04-01  Christian Persch  <chpe@cvs.gnome.org>
 
         * embed/mozilla/EphyPromptService.cpp:
